crates/icydb-core/tests/ui/traits/entity_placement_canister_mismatch.stderr
error[E0271]: type mismatch resolving `<EntityStore as StoreKind>::Canister == DeclaredCanister`
  --> tests/ui/traits/entity_placement_canister_mismatch.rs:38:18
   |
38 |     type Store = EntityStore;
   |                  ^^^^^^^^^^^ type mismatch resolving `<EntityStore as StoreKind>::Canister == DeclaredCanister`
   |
note: expected this to be `DeclaredCanister`
  --> tests/ui/traits/entity_placement_canister_mismatch.rs:32:21
   |
32 |     type Canister = StoreCanister;
   |                     ^^^^^^^^^^^^^
note: required by a bound in `icydb_core::traits::EntityPlacement::Store`
  --> src/traits/mod.rs
   |
   |     type Store: StoreKind<Canister = Self::Canister>;
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EntityPlacement::Store`
